<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FragmentDialogDemo!</string>
    <string name="app_name">SportsScores</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_date">Enter Date</string>
    <string name="date">Date</string>
    <string name="enter_game">Enter Game</string>
    <string name="team1">Team 1</string>
    <string name="score1">0</string>
    <string name="team2">Team 2</string>
    <string name="score2">0</string>
    <string name="next_game">Next Game</string>
    <string name="team1Frag">Team 1:</string>
     <string name="team2Frag"> Team 2:</string>
	<string name="score1_frag">Score:</string>
	<string name="team2_name"> Team 2:</string>
	
	<string-array name="teamsArray">

	    <item >Atlanta Hawks</item>
	    <item >Boston Celtics </item>
	    <item >Brooklyn Nets</item>
	    <item >Charlotte Bobcats</item>
	    <item >Chicago Bulls </item>
	    <item >Cleveland Cavaliers</item>
	    <item >Dallas Mavericks </item>
	    <item >Denver Nuggets </item>
	    
	    <item >Detroit Pistons</item>
	    <item >Golden State Warriors</item>
	    <item >Houston Rockets</item>
	    <item >Indiana Pacers </item>
	    <item >Los Angeles Clippers</item>
	    <item >Los Angeles Lakers</item>
	    <item >Memphis Grizzlies </item>
	    <item >Miami Heat</item>
	    
	    <item >Milwaukee Bucks </item>
	    <item >Minnesota Timberwolves </item>
	    <item >New Orleans Pelicans</item>
	    <item >New York Knicks </item>
	    <item >Oklahoma City Thunder</item>
	    <item >Orlando Magic</item>
	    <item >Philadelphia 76ers</item>
	    <item >Phoenix Suns</item>
	    
	    <item >Portland Trail Blazers</item>
	    <item >Sacramento Kings</item>
	    <item >San Antonio Spurs</item>
	    <item >Toronto Raptors </item>
	    <item >Utah Jazz </item>
	    <item >Washington Wizards</item>
	   
	</string-array>
	
</resources>