<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow>

            <Button
                android:id="@+id/enter_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:onClick="sendMessage"
                android:tag="enter_date"
                android:text="@+string/enter_date" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/dateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/date"
                android:textSize="20sp" >
            </TextView>
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/enter_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:onClick="sendMessage"
                android:tag="enter_game"
                android:text="@+string/enter_game" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/team1"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/score1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/score1"
                android:textSize="20sp" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/team2"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/score2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/score2"
                android:textSize="20sp" >
            </TextView>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/next_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="sendMessage"
            android:tag="next_game"
            android:text="@+string/next_game" />
    </LinearLayout>
    

</RelativeLayout>